[package]
name = "flash-loan"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loan"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1" }
mock_pool = { path = "../mock_pool", features = ["cpi"] }
shared = { path = "../shared", features = ["cpi"] }
arbitrage_bot = { path = "../arbitrage_bot", features = ["cpi"] }
mock_dex = { path = "../mock_dex", features = ["cpi"] }
