[package]
name = "shared"
version = "0.1.0"
description = "Shared data structures for flash loan system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shared"

[features]
default = ["no-idl"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1" } 